# cudnn-perf-tests

./: CMakeLists.txt  README.md  conv_example.txt  out_example.csv  run.sh
include/: benchmark.hpp  parser.hpp
src/: benchmark.cu  benchmark.hpp  parser.hpp
